--- a/airshark.assembly/pom.xml
+++ b/airshark.assembly/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>airshark</groupId>
+		<groupId>hu.mucsi.airshark</groupId>
 		<artifactId>airshark.parent</artifactId>
 		<version>1.0.3</version>
 		<relativePath>../airshark.parent</relativePath>
