Airshark Aries Blueprint Sample using Annotations

--- a/airshark.assembly/src/main/filtered-resources/configuration/config.ini
+++ b/airshark.assembly/src/main/filtered-resources/configuration/config.ini
@@ -12,6 +12,10 @@ pax-web-jsp-${pax-web-jsp}.jar@start,\
 org.apache.aries.jndi-${org.apache.aries.jndi}.jar@start,\
 org.apache.aries.util-${org.apache.aries.util}.jar@start,\
 org.apache.aries.blueprint-${org.apache.aries.blueprint}.jar@start,\
+org.apache.aries.blueprint.annotation.api-${org.apache.aries.blueprint.annotation.api}.jar@start,\
+org.apache.aries.blueprint.annotation.impl-${org.apache.aries.blueprint.annotation.impl}.jar@start,\
+xbean-bundleutils-${xbean-bundleutils}.jar@start,\
+xbean-finder-${xbean-finder}.jar@start,\
 org.apache.aries.proxy-${org.apache.aries.proxy}.jar@start,\
 org.apache.aries.application.install-${org.apache.aries.application.install}.jar@start,\
 org.apache.aries.application.management-${org.apache.aries.application.management}.jar@start,\
