Airshark Blueprint with multiple services sample

--- a/airshark.parent/pom.xml
+++ b/airshark.parent/pom.xml
@@ -18,6 +18,11 @@
 		<airshark.samples.blueprint.interface>1.0.0</airshark.samples.blueprint.interface>
 		<airshark.samples.blueprint.server>1.0.0</airshark.samples.blueprint.server>
 		<airshark.samples.blueprint.client>1.0.0</airshark.samples.blueprint.client>
+		<airshark.samples.blueprint.multiple.interface>1.0.0</airshark.samples.blueprint.multiple.interface>
+		<airshark.samples.blueprint.multiple.server.tom>1.0.0</airshark.samples.blueprint.multiple.server.tom>
+		<airshark.samples.blueprint.multiple.server.alex>1.0.0</airshark.samples.blueprint.multiple.server.alex>
+		<airshark.samples.blueprint.multiple.server.kate>1.0.0</airshark.samples.blueprint.multiple.server.kate>
+		<airshark.samples.blueprint.multiple.client>1.0.0</airshark.samples.blueprint.multiple.client>
 
 
 		<org.eclipse.osgi>3.7.0.v20110613</org.eclipse.osgi>
@@ -488,5 +493,10 @@
 		<module>../airshark.samples.blueprint.interface</module>
 		<module>../airshark.samples.blueprint.server</module>
 		<module>../airshark.samples.blueprint.client</module>
+		<module>../airshark.samples.blueprint.multiple.interface</module>
+		<module>../airshark.samples.blueprint.multiple.server.tom</module>
+		<!--   <module>../airshark.samples.blueprint.multiple.server.alex</module>
+		<module>../airshark.samples.blueprint.multiple.server.kate</module>-->
+		<module>../airshark.samples.blueprint.multiple.client</module>
 	</modules>
 </project>
